Fixe header layout issues

--- a/src/theme.module.scss
+++ b/src/theme.module.scss
@@ -19,8 +19,8 @@ $font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
 // Styles for resetting native elements
 
 .Input {
+  width: 100%;
   font-weight: bold;
-  max-width: 60%;
   background-color: transparent;
   border: none;
   color: $secondary-color;
